force-app/main/default/objects/Federal_Tax_Bracket__mdt/Federal_Tax_Bracket__mdt.object-meta.xml
<CustomObject>
    <description>USA Federal tax brackets and income tax rates to ease tax calculations.
To fill out this data use Tax and Earned Income Credit Tables from the Instructions for Form 1040.</description>
    <label>Federal Tax Bracket</label>
    <pluralLabel>Federal Tax Brackets</pluralLabel>
</CustomObject>