force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Calculation_order__c.field-meta.xml
<CustomField>
    <fullName>Calculation_order__c</fullName>
    <description>Auxiliary field for ordering records before calculations.</description>
    <label>Calculation order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>