force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Filing_status__c.field-meta.xml
<CustomField>
    <fullName>Filing_status__c</fullName>
    <description>Tax filing status value. Uses in the &apos;Take-Home Pay Estimator&apos; calculator.</description>
    <label>Filing status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>MarriedFJointly</fullName>
            </value>
            <value>
                <fullName>MarriedFSeparately</fullName>
            </value>
            <value>
                <fullName>HeadOfHousehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>