force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Min_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Min_Bracket__c</fullName>
    <description>The minimum value of the bracket that determines the tax rate.</description>
    <label>Min Bracket</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>