force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Federal tax rate that applies to the specified filing status and brackets.</description>
    <label>Tax Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>