force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>Tax_Value__c</fullName>
    <description>Predefined tax value for the low bracket value.</description>
    <label>Tax Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>